libs/wingc/src/lsp/snapshots/rename_request/rename_struct_key_usage.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 2
          character: 6
        end:
          line: 2
          character: 10
      newText: t1
    - range:
        start:
          line: 6
          character: 16
        end:
          line: 6
          character: 20
      newText: t1
    - range:
        start:
          line: 9
          character: 7
        end:
          line: 9
          character: 11
      newText: t1

