libs/wingc/src/lsp/snapshots/rename_request/rename_struct_name.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 1
          character: 11
        end:
          line: 1
          character: 15
      newText: t1
    - range:
        start:
          line: 6
          character: 11
        end:
          line: 6
          character: 15
      newText: t1

