libs/wingc/src/lsp/snapshots/rename_request/variable_same_scope.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 1
          character: 4
        end:
          line: 1
          character: 9
      newText: t1
    - range:
        start:
          line: 3
          character: 13
        end:
          line: 3
          character: 18
      newText: t1

